use Editor instance ref to reset formik form, fix hr html/lexical style mismatch, fix ToC button vertical spacing

--- a/styles/text.scss
+++ b/styles/text.scss
@@ -102,7 +102,7 @@
   }
 }
 
-.sn-hr {
+.sn-text hr, .sn-hr {
   border-top: 3px solid var(--theme-quoteBar);
   caret-color: transparent;
 }
